--- a/source/sass/block/_container.scss
+++ b/source/sass/block/_container.scss
@@ -3,14 +3,18 @@
   padding-left: 30px;
   padding-right: 30px;
   margin: 0 auto;
+}
 
-  @media (min-width: $tablet-width) {
+@media (min-width: $tablet-width) {
+  .container {
     width: 768px;
     padding-left: 50px;
     padding-right: 50px;
   }
+}
 
-  @media (min-width: $desktop-width) {
+@media (min-width: $desktop-width) {
+  .container {
     width: 1150px;
     padding-left: 50px;
     padding-right: 50px;
