--- a/source/sass/block/_about.scss
+++ b/source/sass/block/_about.scss
@@ -4,174 +4,179 @@
   text-align: left;
   padding-top: 70px;
   margin-bottom: 16px;
+}
 
-  .about__list {
-    list-style: none;
-    padding: 0;
-    margin-top: 18px;
+.about__list {
+  list-style: none;
+  padding: 0;
+  margin-top: 18px;
+}
+
+.about__item {
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 1.18;
+  padding-top: 70px;
+  padding-bottom: 13px;
+  position: relative;
+  padding-right: 10px;
+
+  &--eco::before {
+    @include pseudo;
+    background-image: url("../img/icon-feature-flower.svg");
+    width: 32px;
+    height: 37px;
+    top: 16px;
+    left: 9px;
+    opacity: 1;
   }
 
-  .about__item {
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 1.18;
-    padding-top: 70px;
-    padding-bottom: 13px;
-    position: relative;
-    padding-right: 10px;
-
-    &--eco::before {
-      @include pseudo;
-      background-image: url("../img/icon-feature-flower.svg");
-      width: 32px;
-      height: 37px;
-      top: 16px;
-      left: 9px;
-      opacity: 1;
-    }
-
-    &--style::before {
-      @include pseudo;
-      background-image: url("../img/icon-feature-money.svg");
-      fill: $color-btn-add1;
-      width: 47px;
-      height: 27px;
-      top: 16px;
-      left: 1px;
-      opacity: 1;
-    }
-
-    &--like::before {
-      @include pseudo;
-      background-image: url("../img/icon-feature-heart.svg");
-      fill: $color-btn-add1;
-      width: 33px;
-      height: 27px;
-      top: 21px;
-      left: 9px;
-      opacity: 1;
-    }
-
-    &--handmade::before {
-      @include pseudo;
-      background-image: url("../img/icon-feature-ball.svg");
-      fill: $color-btn-add1;
-      width: 35px;
-      height: 34px;
-      top: 17px;
-      left: 4px;
-      opacity: 1;
-    }
-
-    &--local::before {
-      @include pseudo;
-      background-image: url("../img/icon-feature-rocket.svg");
-      fill: $color-btn-add1;
-      width: 55px;
-      height: 23px;
-      top: 19px;
-      left: -5px;
-      opacity: 1;
-    }
-
-    &--gift::before {
-      @include pseudo;
-      background-image: url("../img/icon-feature-gift.svg");
-      fill: $color-btn-add1;
-      width: 33px;
-      height: 32px;
-      top: 17px;
-      left: 4px;
-      opacity: 1;
-    }
+  &--style::before {
+    @include pseudo;
+    background-image: url("../img/icon-feature-money.svg");
+    fill: $color-btn-add1;
+    width: 47px;
+    height: 27px;
+    top: 16px;
+    left: 1px;
+    opacity: 1;
   }
+
+  &--like::before {
+    @include pseudo;
+    background-image: url("../img/icon-feature-heart.svg");
+    fill: $color-btn-add1;
+    width: 33px;
+    height: 27px;
+    top: 21px;
+    left: 9px;
+    opacity: 1;
+  }
+
+  &--handmade::before {
+    @include pseudo;
+    background-image: url("../img/icon-feature-ball.svg");
+    fill: $color-btn-add1;
+    width: 35px;
+    height: 34px;
+    top: 17px;
+    left: 4px;
+    opacity: 1;
+  }
+
+  &--local::before {
+    @include pseudo;
+    background-image: url("../img/icon-feature-rocket.svg");
+    fill: $color-btn-add1;
+    width: 55px;
+    height: 23px;
+    top: 19px;
+    left: -5px;
+    opacity: 1;
+  }
+
+  &--gift::before {
+    @include pseudo;
+    background-image: url("../img/icon-feature-gift.svg");
+    fill: $color-btn-add1;
+    width: 33px;
+    height: 32px;
+    top: 17px;
+    left: 4px;
+    opacity: 1;
+  }
+}
 
   /*--------------------------------- КABOUT/КОРОТКО О НАС - ПЛАНШЕТ ---------------------------------------*/
 
-  @media (min-width: $tablet-width) {
-    margin-top: 50px;
-    margin-bottom: 67px;
-
-    .about__list {
-      column-count: 2;
-      margin-top: 0;
-      column-gap: 0;
-      margin-left: 2px;
-    }
-
-    .about__item {
-      font-size: 20px;
-      line-height: 1.1;
-      text-align: left;
-      padding-top: 100px;
-      padding-right: 39px;
-
-      &--eco::before {
-        top: 50px;
-      }
-
-      &--style::before {
-        top: 48px;
-      }
-
-      &--like::before {
-        top: 50px;
-      }
-
-      &--handmade::before {
-        top: 53px;
-      }
-
-      &--local::before {
-        top: 51px;
-      }
-
-      &--gift::before {
-        top: 46px;
-      }
-    }
+@media (min-width: $tablet-width) {
+  .about {
+  margin-top: 50px;
+  margin-bottom: 67px;
   }
 
-  /*--------------------------------- ABOUT/КОРОТКО О НАС - ДЕСКТОП ---------------------------------------*/
+  .about__list {
+    column-count: 2;
+    margin-top: 0;
+    column-gap: 0;
+    margin-left: 2px;
+  }
 
-  @media (min-width: $desktop-width) {
-    margin-top: 84px;
-    margin-right: 0;
-    padding-left: 170px;
+  .about__item {
+    font-size: 20px;
+    line-height: 1.1;
+    text-align: left;
+    padding-top: 100px;
+    padding-right: 39px;
 
-    .about__list {
-      margin-left: 5px;
-      margin-top: 4px;
-      width: 700px;
+    &--eco::before {
+      top: 50px;
     }
 
-    .about__item {
-      padding-top: 98px;
-      width: 334px;
+    &--style::before {
+      top: 48px;
+    }
 
-      &--eco::before {
-        top: 44px;
-      }
+    &--like::before {
+      top: 50px;
+    }
 
-      &--style::before {
-        top: 46px;
-      }
+    &--handmade::before {
+      top: 53px;
+    }
 
-      &--like::before {
-        top: 50px;
-      }
+    &--local::before {
+      top: 51px;
+    }
 
-      &--handmade::before {
-        top: 48px;
-      }
-
-      &--local::before {
-        top: 49px;
-      }
-
-      &--gift::before {
-        top: 46px;
-      }
+    &--gift::before {
+      top: 46px;
     }
   }
 }
+
+  /*--------------------------------- ABOUT/КОРОТКО О НАС - ДЕСКТОП ---------------------------------------*/
+
+@media (min-width: $desktop-width) {
+  .about {
+    margin-top: 84px;
+    margin-right: 0;
+    padding-left: 170px;
+  }
+
+  .about__list {
+    margin-left: 5px;
+    margin-top: 4px;
+    width: 700px;
+  }
+
+  .about__item {
+    padding-top: 98px;
+    width: 334px;
+
+    &--eco::before {
+      top: 44px;
+    }
+
+    &--style::before {
+      top: 46px;
+    }
+
+    &--like::before {
+      top: 50px;
+    }
+
+    &--handmade::before {
+      top: 48px;
+    }
+
+    &--local::before {
+      top: 49px;
+    }
+
+    &--gift::before {
+      top: 46px;
+    }
+  }
+}
+
