--- a/source/sass/block/_catalog.scss
+++ b/source/sass/block/_catalog.scss
@@ -1,62 +1,64 @@
 
 .catalog {
   margin-bottom: 55px;
+}
 
-  .catalog__heading {
-    @include container;
+.catalog__container {
+  @include container;
+}
+
+.catalog__list {
+  list-style: none;
+  margin-top: 30px;
+  padding: 0;
+}
+
+.catalog__item {
+  text-align: center;
+  list-style: none;
+
+  &:not(:first-of-type) {
+    margin-top: 30px;
   }
+}
 
-  .catalog__container {
-    @include container;
+@media (min-width: $tablet-width) {
+  .catalog {
+    margin-bottom: 63px;
   }
 
   .catalog__list {
-    list-style: none;
-    margin-top: 30px;
-    padding: 0;
+    margin-top: 66px;
+    margin-bottom: 0;
   }
 
   .catalog__item {
-    text-align: center;
-    list-style: none;
-
     &:not(:first-of-type) {
-      margin-top: 30px;
-    }
-  }
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 63px;
-
-    .catalog__list {
-      margin-top: 66px;
-      margin-bottom: 0;
-    }
-
-    .catalog__item {
-      &:not(:first-of-type) {
-        margin-top: 54px;
-      }
-    }
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-bottom: 105px;
-
-    .catalog__list {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 129px;
-    }
-
-    .catalog__item {
-      &:not(:first-of-type) {
-        margin-top: 0;
-      }
-
-      &:not(:last-of-type) {
-        padding-right: 50px;
-      }
+      margin-top: 54px;
     }
   }
 }
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    margin-bottom: 105px;
+  }
+
+  .catalog__list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 129px;
+    flex-wrap: wrap;
+  }
+
+  .catalog__item {
+    &:not(:first-of-type) {
+      margin-top: 0;
+    }
+
+    &:not(:last-of-type) {
+      padding-right: 50px;
+    }
+  }
+}
+
