--- a/source/sass/block/_page-header.scss
+++ b/source/sass/block/_page-header.scss
@@ -2,14 +2,18 @@
   width: 320px;
   margin: 0 auto;
   background-color: $bg-main;
+}
 
-  @media (min-width: $tablet-width) {
+@media (min-width: $tablet-width) {
+  .page-header {
     width: 768px;
     padding-left: 50px;
     padding-right: 50px;
   }
+}
 
-  @media (min-width: $desktop-width) {
+@media (min-width: $desktop-width) {
+  .page-header {
     width: 1150px;
   }
 }
