--- a/source/sass/block/_reviews.scss
+++ b/source/sass/block/_reviews.scss
@@ -7,7 +7,7 @@
   &::after {
     @include pseudo;
     background-image: url("../img/bg-zigzag-line.svg");
-    bottom: -56px;
+    bottom: -52px;
     height: 7px;
     width: 100%;
     fill: #f9f9f9;
@@ -38,6 +38,7 @@
   line-height: 2;
   text-align: left;
   margin: 0;
+  color: $color-text-paragraph;
 }
 
 .reviews__name {
@@ -66,14 +67,6 @@
   }
 }
 
-.reviews__slider--control {
-  display: flex;
-  flex-direction: row;
-  margin-top: 31px;
-  margin-bottom: 39px;
-}
-
-
 /*--------------------------------- ОТЗЫВЫ - ПЛАНШЕТ ---------------------------------------*/
 
 @media (min-width: $tablet-width) {
@@ -81,16 +74,16 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-image: url("../img/review@1x.jpg");
+    background: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     padding-top: 80px;
-    background-size: 350px, 475px;
-    min-height: 457px;
+    background-size: 350px 475px;
+    background-color: #ffffff;
     width: 768px;
     margin: 0 auto;
 
     &::after {
-      bottom: -82px;
+      bottom: -87px;
       height: 20px;
       width: 768px;
       background-size: 768px 20px;
@@ -102,7 +95,7 @@
     font-size: 17px;
     line-height: 1.76;
     font-weight: 400;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     padding-top: 0;
   }
@@ -114,9 +107,9 @@
   }
 
   .reviews__body {
-    @include container;
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 46px;
   }
 
   .reviews__slider {
@@ -133,6 +126,7 @@
   .reviews__heading {
     order: -2;
     margin-left: -4px;
+    margin-bottom: 50px;
   }
 
   .reviews__comment {
@@ -149,13 +143,6 @@
     max-width: 500px;
   }
 
-  .reviews__slider--control {
-    position: absolute;
-    bottom: 17px;
-    right: 0;
-    border: none;
-  }
-
   .reviews__link {
     width: 100px;
   }
@@ -165,10 +152,11 @@
 
 @media (min-width: $desktop-width) {
   .reviews {
-    @include container;
-    background-position: top 0 left 50px;
-    padding-top: 90px;
-    margin-top: 78px;
+    background-position: top 0 left 0;
+    width: 1050px;
+    padding-top: 68px;
+    margin-top: 80px;
+
 
     &::after {
       bottom: -93px;
@@ -182,49 +170,44 @@
   .reviews__body {
     margin: 0;
     padding: 0;
-    width: 930px;
-    margin-left: 175px;
-    padding-top: 70px;
+    padding-bottom: 93px;
   }
 
   .reviews__heading {
-    margin-left: -4px;
-    margin-bottom: 0;
+    margin-left: 171px;
+    margin-bottom: 50px;
+  }
+
+  .reviews__list {
+    margin: 0;
+    padding: 0;
   }
 
   .reviews__slider {
-    margin-top: -51px;
+    margin: 0;
+    padding-left: 175px;
   }
 
   .reviews__item {
-    padding-top: 0;
+    margin: 0;
+    padding: 0;
   }
 
   .reviews__comment {
-    margin: 0;
-    padding-right: 80px;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0;
+    width: 772px;
+    margin-bottom: 43px;
   }
 
   .reviews__name {
     margin: 0;
     padding: 0;
-    margin-top: 42px;
-  }
-
-  .reviews__link {
-    margin: 0;
-    padding: 0;
-    padding-top: 4px;
+    font-size: 17px;
+    margin-bottom: 5px;
   }
 
   .reviews__btn {
     margin-top: 9px;
     margin-left: 478px;
-  }
-
-  .reviews__slider--control {
-    bottom: 65px;
   }
 }
