--- a/source/sass/block/_button.scss
+++ b/source/sass/block/_button.scss
@@ -9,7 +9,7 @@
   line-height: 1.18;
   text-align: center;
   vertical-align: middle;
-  padding-top: 14px;
+  padding: 14px 20px 14px 20px;
 
   &--white {
     color: $color-text-paragraph;
