--- a/source/sass/block/_catalog.scss
+++ b/source/sass/block/_catalog.scss
@@ -52,12 +52,14 @@
   }
 
   .catalog__item {
+    margin-bottom: 10px;
+
     &:not(:first-of-type) {
       margin-top: 0;
     }
 
-    &:not(:last-of-type) {
-      padding-right: 50px;
+    &:nth-child(3n+2) {
+      padding: 0 50px;
     }
   }
 }
