--- a/source/sass/block/_form.scss
+++ b/source/sass/block/_form.scss
@@ -316,21 +316,21 @@
 
 .form__textarea {
   width: 320px;
+}
 
-  &--text {
-    font-size: 17px;
-    line-height: 1.06;
-    width: 100%;
-    padding: 14px;
-    border: 2px solid #444444;
-    margin-top: 0;
-    min-height: 142px;
+.form__text-form {
+  font-size: 17px;
+  line-height: 1.06;
+  width: 100%;
+  padding: 14px;
+  border: 2px solid #444444;
+  margin-top: 0;
+  min-height: 142px;
 
-    &:hover,
-    &:focus {
-      border: solid 2px #62d1ba;
-      outline: none;
-    }
+  &:hover,
+  &:focus {
+    border: solid 2px #62d1ba;
+    outline: none;
   }
 }
 
@@ -346,7 +346,6 @@
 
 .form__btn {
   display: block;
-  padding-top: 3px;
   margin: 30px 0 55px 0;
 }
 
@@ -407,6 +406,10 @@ input[type="email"]::placeholder {
         display: none;
       }
     }
+  }
+
+  .form__legend--initials {
+    margin-top: 12px;
   }
 
   .form__legend--checkbox {
@@ -550,15 +553,15 @@ input[type="email"]::placeholder {
 
   .form__textarea {
     align-self: center;
+  }
 
-    &--text {
-      width: 501px;
-      margin-left: 128px;
-      font-size: 19px;
-      line-height: 0.95;
-      padding-top: 13px;
-      padding-left: 15px;
-    }
+  .form__text-form {
+    width: 501px;
+    margin-left: 128px;
+    font-size: 19px;
+    line-height: 0.95;
+    padding-top: 13px;
+    padding-left: 15px;
   }
 
   .form__field {
@@ -574,6 +577,7 @@ input[type="email"]::placeholder {
 
     &--textarea {
       margin-top: 18px;
+      padding-left: 0;
     }
   }
 
@@ -699,11 +703,9 @@ input[type="email"]::placeholder {
     padding-right: 175px;
   }
 
-  .form__textarea {
-    &--text {
-      width: 700px;
-      margin-left: 74px;
-    }
+  .form__text-form {
+    width: 700px;
+    margin-left: 74px;
   }
 
   .form__phone-svg {
