--- a/source/sass/block/_page-footer.scss
+++ b/source/sass/block/_page-footer.scss
@@ -26,7 +26,7 @@
 
 @media (min-width: $tablet-width) {
   .page-footer {
-    padding-top: 51px;
+    padding-top: 50px;
   }
 
   .page-footer__container {
@@ -36,6 +36,7 @@
   .page-footer__logo {
     display: block;
     height: 50px;
+    margin-right: 104px;
 
     &:hover {
       fill: #46c1ae;
