--- a/source/sass/block/_reviews.scss
+++ b/source/sass/block/_reviews.scss
@@ -121,6 +121,8 @@
     order: -1;
     margin-left: auto;
     width: 175px;
+    align-items: flex-start;
+    align-self: flex-start;
   }
 
   .reviews__heading {
